2009-03-15  Yaakov Selkowitz <yselkowitz@users.sourceforge.net>

	* errno.cc (_sys_errlist): Add ESTRPIPE.

2009-03-15  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Export wcsdup.
	* posix.sgml: Add wcsdup to SUSv4 list.
	* include/cygwin/version.h: Bump API minor number.

2009-03-15  Corinna Vinschen  <corinna@vinschen.de>

	* include/inttypes.h: Remove "l" size specifier from all 16 and 32 bit
	definitions.

2009-03-14  Christopher Faylor  <me+cygwin@cgf.cx>

	* path.cc (warn_msdos): Don't warn about MS-DOS filenames encountered
	during initialization.

2009-03-14  Corinna Vinschen  <corinna@vinschen.de>

	* gendef: Remove STABS directives.

2009-03-13  Corinna Vinschen  <corinna@vinschen.de>

	* mktemp.cc: Remove STABS specific link-time warning.  Align copyright
	text to upstream.

2009-03-13  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc: Fix lockf copyright to latest version.

2009-03-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (path_conv::isgood_inode): Move to be defined
	earlier.
	(get_ino_by_handle): Take additional path_conv argument, accommodate
	throughout.  Only use FileId if isgood_inode check is true.
	(fhandler_base::open_fs): Simplify setting ino due to above change.
	(readdir_get_ino): Make sure to return always a non-zero inode number.
	(fhandler_disk_file::readdir): Always open file in dir with
	FILE_OPEN_REPARSE_POINT so as not to open wrong file.
	Drop call to isgood_inode here.
	* path.cc (symlink_info::check): Call fs.update in case we're fetching
	file information from call to NtQueryDirectoryFile.

2009-03-12  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (fhandler_disk_file::lock): Don't test file open mode in
	case of flock-type locks.  Explain why.

2009-03-12  Brian Ford <Brian.Ford@FlightSafety.com>

	* gethostby_helper: Fix typos in DEBUGGING case.

2009-03-11  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Export wcscasecmp, wcsncasecmp.